--- a/package.json
+++ b/package.json
@@ -11,37 +11,35 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-modules-core": "~1.5.10",
-    "expo-asset": "~8.10.1",
-    "expo-font": "~11.4.0",
-    "expo-splash-screen": "~0.20.5",
-    "react": "18.2.0",
-    "react-native": "0.72.10",
-    "@expo/vector-icons": "^13.0.0",
     "@expo/config-plugins": "~7.2.2",
-    "react-native-paper": "^5.10.6",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "react-native-screens": "~3.22.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-gesture-handler": "~2.12.0",
-    "@supabase/supabase-js": "^2.38.0",
     "@stripe/stripe-react-native": "^0.28.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "expo-crypto": "~12.4.1",
+    "@supabase/supabase-js": "^2.38.0",
+    "expo": "~49.0.15",
+    "expo-asset": "~8.10.1",
     "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
+    "expo-font": "~11.4.0",
+    "expo-modules-core": "~1.5.10",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "react-native-reanimated": "~3.3.0"
+    "react": "18.2.0",
+    "react-native": "0.72.10",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.10.6",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@expo/metro-config": "~0.10.7",
     "@react-native-community/cli": "^11.3.7",
     "@react-native-community/cli-server-api": "^11.3.7",
-    "metro": "^0.76.0",
-    "metro-core": "^0.76.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "~0.72.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -49,6 +47,8 @@
     "eslint": "^8.44.0",
     "eslint-config-expo": "^7.0.0",
     "jest": "^29.2.1",
+    "metro": "^0.76.0",
+    "metro-core": "^0.76.0",
     "typescript": "^5.1.3"
   },
   "private": true
