--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/config-plugins": "~7.2.2",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -23,11 +24,13 @@
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-font": "~11.4.0",
+    "expo-location": "~16.1.0",
     "expo-modules-core": "~1.5.10",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-calendars": "^1.1302.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.10.6",
     "react-native-reanimated": "~3.3.0",
