--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/config-plugins": "~7.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -32,6 +33,7 @@
     "react-native": "0.72.10",
     "react-native-calendars": "^1.1302.0",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-paper": "^5.10.6",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
