--- a/package.json
+++ b/package.json
@@ -14,17 +14,14 @@
     "@expo/config-plugins": "~7.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@stripe/stripe-react-native": "^0.28.0",
     "@supabase/supabase-js": "^2.38.0",
     "expo": "~49.0.15",
-    "expo-asset": "~8.10.1",
     "expo-constants": "~14.4.2",
-    "expo-crypto": "~12.4.1",
-    "expo-font": "~11.4.0",
     "expo-location": "~16.1.0",
     "expo-modules-core": "~1.5.10",
     "expo-splash-screen": "~0.20.5",
@@ -33,12 +30,12 @@
     "react-native": "0.72.10",
     "react-native-calendars": "^1.1302.0",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-paper": "^5.10.6",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
