added missing assets icons and also revamped profile management and discovery tabs

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "payment-agent",
     "version": "1.0.0",
     "orientation": "portrait",
-
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
@@ -20,7 +20,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": null,
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.paymentagent.app"
