saving latest progress with merchant onboarding

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_51OeryTISb771rKVJiVtMSPfcVcHZFDKbRnEb
 # Environment
 NODE_ENV=development
 
+# Deep linking url
+EXPO_PUBLIC_OAUTH_REDIRECT=com.kerbdrop.payagent://auth
