--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 
 # Environment
 NODE_ENV=development
+
+# Deep linking url
+EXPO_PUBLIC_OAUTH_REDIRECT=myapp://auth
